; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress_listener.c_acceptcb_free.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress_listener.c_acceptcb_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evconnlistener = type { i32 }
%struct.sockaddr = type { i32 }

@.str = private unnamed_addr constant [15 x i8] c"Got one for %p\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.evconnlistener*, i32, %struct.sockaddr*, i32, i8*)* @acceptcb_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @acceptcb_free(%struct.evconnlistener* %0, i32 %1, %struct.sockaddr* %2, i32 %3, i8* %4) #0 {
  %6 = alloca %struct.evconnlistener*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.sockaddr*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  store %struct.evconnlistener* %0, %struct.evconnlistener** %6, align 8
  store i32 %1, i32* %7, align 4
  store %struct.sockaddr* %2, %struct.sockaddr** %8, align 8
  store i32 %3, i32* %9, align 4
  store i8* %4, i8** %10, align 8
  %12 = load i8*, i8** %10, align 8
  %13 = bitcast i8* %12 to i32*
  store i32* %13, i32** %11, align 8
  %14 = load i32*, i32** %11, align 8
  %15 = load i32, i32* %14, align 4
  %16 = add nsw i32 %15, -1
  store i32 %16, i32* %14, align 4
  %17 = load i32*, i32** %11, align 8
  %18 = bitcast i32* %17 to i8*
  %19 = call i32 @TT_BLATHER(i8* %18)
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @evutil_closesocket(i32 %20)
  %22 = load i32*, i32** %11, align 8
  %23 = load i32, i32* %22, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %28, label %25

25:                                               ; preds = %5
  %26 = load %struct.evconnlistener*, %struct.evconnlistener** %6, align 8
  %27 = call i32 @evconnlistener_free(%struct.evconnlistener* %26)
  br label %28

28:                                               ; preds = %25, %5
  ret void
}

declare dso_local i32 @TT_BLATHER(i8*) #1

declare dso_local i32 @evutil_closesocket(i32) #1

declare dso_local i32 @evconnlistener_free(%struct.evconnlistener*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
